--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vren-vue2-screen-template",
+  "name": "vue-databoard-template",
   "version": "1.0.0",
   "private": true,
   "scripts": {
